User profile - messages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
-<div class="clearfix"></div>
+<app-header class="x"></app-header>
+<div class="clearfix" class="x"></div>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
-<div id="backtotop">
+<app-footer class="x"></app-footer>
+<div id="backtotop" class="x">
 	<a href="#"></a>
 </div>
