--- a/src/app/components/hotels/hotels-listing/hotels-listing.component.html
+++ b/src/app/components/hotels/hotels-listing/hotels-listing.component.html
@@ -31,7 +31,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-6 col-xs-6">
+                <div class="col-md-6 col-xs-6" #target>
                     <div class="sort-by">
                         <div class="sort-by-select">
                             <div id="choosenOrder" class="chosen-container chosen-container-single chosen-container-single-nosearch chosen-with-drop"
@@ -93,8 +93,8 @@
             </div>
             <div class="row" *ngIf="listingGrid && pagedHotels?.length > 0">
                 <div class="col-lg-6 col-md-12" *ngFor="let hotel of pagedHotels">
-                    <a [routerLink]="['/hotels', hotel.id]" class="listing-item-container compact">
-                        <div class="listing-item">
+                    <a class="listing-item-container compact">
+                        <div [routerLink]="['/hotels', hotel.id]" class="listing-item">
                             <img *ngIf="hotel.photo !== 'null'; else defaultPhoto" src="assets/images/hotels/{{hotel.photo}}" alt="">
                             <ng-template #defaultPhoto>
                                 <img src="assets/images/listing-item-01.jpg" alt="">
@@ -110,9 +110,9 @@
                                 </h3>
                                 <span>{{hotel.adresse}}, {{hotel.ville_name}}</span>
                             </div>
+                            <span class="like-icon" [ngClass]="{'liked': hotel.liked}" (click)="addOrRemoveFromFavoris($event, hotel?.id)"></span>
                         </div>
                     </a>
-                    <span class="like-icon" [ngClass]="{'liked': hotel.liked}" (click)="addOrRemoveFromFavoris($event, hotel?.id)"></span>
                 </div>
             </div>
             <div class="clearfix"></div>
@@ -122,19 +122,19 @@
                         <nav class="pagination">
                             <ul *ngIf="pager.pages && pager.pages.length">
                                 <li [ngClass]="{disabled:pager.currentPage === 1}">
-                                    <a (click)="setPage(1)">First</a>
+                                    <a (click)="setPage(1, target)">First</a>
                                 </li>
                                 <li [ngClass]="{disabled:pager.currentPage === 1}">
-                                    <a (click)="setPage(pager.currentPage - 1)">Previous</a>
+                                    <a (click)="setPage(pager.currentPage - 1, target)">Previous</a>
                                 </li>
                                 <li *ngFor="let page of pager.pages" [ngClass]="{'current-page':pager.currentPage === page}">
-                                    <a (click)="setPage(page)" [ngClass]="{'current-page':pager.currentPage === page}">{{page}}</a>
+                                    <a (click)="setPage(page, target)" [ngClass]="{'current-page':pager.currentPage === page}">{{page}}</a>
                                 </li>
                                 <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-                                    <a (click)="setPage(pager.currentPage + 1)">Next</a>
+                                    <a (click)="setPage(pager.currentPage + 1, target)">Next</a>
                                 </li>
                                 <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-                                    <a (click)="setPage(pager.totalPages)">Last</a>
+                                    <a (click)="setPage(pager.totalPages, target)">Last</a>
                                 </li>
                             </ul>
                         </nav>
