User profile - add hotel.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -55,11 +55,11 @@
                                         <i class="sl sl-icon-settings"></i> Dashboard</a>
                                 </li>
                                 <li>
-                                    <a href="dashboard-messages.html">
+                                    <a [routerLink]="['profile/messages']">
                                         <i class="sl sl-icon-envelope-open"></i> Messages</a>
                                 </li>
                                 <li>
-                                    <a>
+                                    <a [routerLink]="['profile/bookmarks']">
                                         <i class="fa fa-bookmark-o"></i> Bookmarks</a>
                                 </li>
                                 <li>
