--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,15 @@
-<app-header class="x"></app-header>
-<div class="clearfix" class="x"></div>
-<router-outlet></router-outlet>
-<app-footer class="x"></app-footer>
-<div id="backtotop" class="x">
-	<a href="#"></a>
+<app-header></app-header>
+<div class="clearfix"></div>
+<div *ngIf="!profile">
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+    <div id="backtotop">
+        <a href="#"></a>
+    </div>
+</div>
+<div id="dashboard" *ngIf="profile">
+    <app-left-navigation></app-left-navigation>
+    <div class="col-md-12 col-lg-12">
+        <router-outlet></router-outlet>
+    </div>
 </div>
