User profile - add article.

--- a/src/app/components/profile/add-hotel/add-hotel.component.html
+++ b/src/app/components/profile/add-hotel/add-hotel.component.html
@@ -13,7 +13,7 @@
                         <li>
                             <a href="#">Dashboard</a>
                         </li>
-                        <li>Add Listing</li>
+                        <li>Add Hotel</li>
                     </ul>
                 </nav>
             </div>
