--- a/src/app/components/profile/left-navigation/left-navigation.component.html
+++ b/src/app/components/profile/left-navigation/left-navigation.component.html
@@ -68,6 +68,11 @@
                             <i class="fa fa-hotel"></i> Add hotel
                         </a>
                     </li>
+                    <li [routerLink]="['profile/articles/add']" [routerLinkActive]="['active']">
+                        <a>
+                            <i class="sl sl-icon-book-open"></i> Add article
+                        </a>
+                    </li>
                 </ul>
             </li>
         </ul>
