--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -19,19 +19,16 @@
                 <h4>Helpful Links</h4>
                 <ul class="footer-links">
                     <li>
-                        <a href="#">Login</a>
+                        <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">Sign Up</a>
+                        <a href="#">Restaurants</a>
                     </li>
                     <li>
-                        <a href="#">My Account</a>
+                        <a href="#">Hotêls</a>
                     </li>
                     <li>
-                        <a href="#">Add Listing</a>
-                    </li>
-                    <li>
-                        <a href="#">Pricing</a>
+                        <a href="#">Articles</a>
                     </li>
                     <li>
                         <a href="#">Privacy Policy</a>
@@ -45,13 +42,7 @@
                         <a href="#">Blog</a>
                     </li>
                     <li>
-                        <a href="#">Our Partners</a>
-                    </li>
-                    <li>
-                        <a href="#">How It Works</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                        <a href="#">Contact us</a>
                     </li>
                 </ul>
                 <div class="clearfix"></div>
@@ -59,13 +50,13 @@
             <div class="col-md-3  col-sm-12">
                 <h4>Contact Us</h4>
                 <div class="text-widget">
-                    <span>12345 Little Lonsdale St, Melbourne</span>
+                    <span>Hay El Qods Hay Al Hikma Maroc, Rue de la Liberté</span>
                     <br> Phone:
-                    <span>(123) 123-456 </span>
+                    <span>06-66-66-66 </span>
                     <br> E-Mail:
                     <span>
                         <a href="#">
-                            <span class="__cf_email__" data-cfemail="244b42424d474164415c45495448410a474b49">[email&#160;protected]</span>
+                            <span class="__cf_email__" data-cfemail="244b42424d474164415c45495448410a474b49">listeo.oujda@gmail.com</span>
                         </a>
                     </span>
                     <br>
@@ -96,7 +87,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <div class="copyrights">© 2017 Listeo. All Rights Reserved.</div>
+                <div class="copyrights">© 2018 Listeo. All Rights Reserved.</div>
             </div>
         </div>
     </div>
