--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -112,23 +112,18 @@
                                 </p>
                                 <div class="form-row">
                                     <input type="submit" class="button border margin-top-5" name="login" value="Login" />
-                                    <div class="checkboxes margin-top-10">
-                                        <input type="checkbox" name="check">
-                                        <label>Remember Me</label>
-                                    </div>
                                 </div>
-                                <ul class="social-icons rounded">
-                                    <li>
-                                        <a class="facebook" (click)="signInWithFB()">
-                                            <i class="icon-facebook"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="gplus" (click)="signInWithGoogle()">
-                                            <i class="icon-gplus"></i>
-                                        </a>
-                                    </li>
-                                </ul>
+                                <h5><span>or</span></h5>
+                                <div class="form-row oauth">
+                                    <button (click)="signInWithFB()" class="loginBtn loginBtn--facebook">
+                                        Login with Facebook
+                                    </button>
+                                </div>
+                                <div class="form-row oauth">
+                                    <button (click)="signInWithGoogle()" class="loginBtn loginBtn--google">
+                                        Login with Google
+                                    </button>
+                                </div>
                             </form>
                         </div>
                         <div class="tab-content" id="tab2" style="display: none;">
@@ -148,7 +143,7 @@
                                 <span class="error" *ngIf="registerLastName.invalid && !!registerLastName.errors.pattern && (registerLastName.dirty || registerLastName.touched)">Invalid last name.</span>
                                 <p class="form-row form-row-wide">
                                     <label>Last Name:
-                                        <i class="im im-icon-Mail"></i>
+                                        <i class="im im-icon-Male"></i>
                                         <input type="text" class="input-text" name="email" formControlName="registerLastName" [ngClass]="{ 'has-success': registerLastName.valid
                                         && (registerLastName.dirty || registerLastName.touched),'has-danger': registerLastName.invalid
                                         && (registerLastName.dirty || registerLastName.touched)}" />
@@ -190,18 +185,17 @@
                                     </label>
                                 </p>
                                 <input type="submit" class="button border fw margin-top-10" name="register" value="Register" />
-                                <ul class="social-icons rounded">
-                                    <li>
-                                        <a class="facebook" (click)="signInWithFB()">
-                                            <i class="icon-facebook"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a class="gplus" (click)="signInWithGoogle()">
-                                            <i class="icon-gplus"></i>
-                                        </a>
-                                    </li>
-                                </ul>
+                                <h5><span>or</span></h5>
+                                <div class="form-row oauth">
+                                    <button (click)="signInWithFB()" class="loginBtn loginBtn--facebook">
+                                        Sign up with Facebook
+                                    </button>
+                                </div>
+                                <div class="form-row oauth">
+                                    <button (click)="signInWithGoogle()" class="loginBtn loginBtn--google">
+                                        Sign up with Google
+                                    </button>
+                                </div>
                             </form>
                         </div>
                     </div>
