--- a/src/app/components/restaurants/restaurant-directions/restaurant-directions.component.css
+++ b/src/app/components/restaurants/restaurant-directions/restaurant-directions.component.css
@@ -64,3 +64,39 @@ span.stars span {
     vertical-align: sub;
     font-weight: 800
 }
+
+.style-1 .tabs-container .tab-content{
+    padding: 10px 0 0
+}
+
+.directions-information{
+    border: 1px solid #ddd;
+    box-shadow: 1px 2px #888888;
+    height: 100px;
+    padding-left: 20px;
+}
+
+.map-icon {
+	font-size: 50px;
+    color: #3B5998;
+    padding-right: 20px;
+    border-right: 1px solid #ddd
+}
+
+.im-icon-Car-2{
+    font-size: 50px;
+    color: #ff0000;
+    padding-right: 20px;
+    border-right: 1px solid #ddd
+}
+
+.information{
+    padding-top: 20px;
+    color: #000;
+    font-size: 16px
+}
+
+.information .distance{
+    display: block;
+    margin-bottom: 10px;
+}
