--- a/src/app/components/restaurants/restaurants-listing/restaurants-listing.component.html
+++ b/src/app/components/restaurants/restaurants-listing/restaurants-listing.component.html
@@ -3,14 +3,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2>Listings</h2>
-                <span>Grid Layout With Sidebar</span>
+                <h2>Restaurants list</h2>
                 <nav id="breadcrumbs">
                     <ul>
                         <li>
                             <a href="#">Home</a>
                         </li>
-                        <li>Listings</li>
+                        <li>Restaurants</li>
                     </ul>
                 </nav>
             </div>
@@ -77,9 +76,7 @@
                                     <div class="listing-badge now-closed">Now Closed</div>
                                 </ng-template>
                                 <div class="listing-item-inner">
-                                    <h3>{{restaurant.name}}
-                                        <i class="verified-icon"></i>
-                                    </h3>
+                                    <h3>{{restaurant.name}}</h3>
                                     <span>{{restaurant.adresse}}, {{restaurant.ville_name}}</span>
                                     <div class="star-rating">
                                         <div class="rating-counter">
