--- a/src/app/components/restaurants/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/components/restaurants/restaurant-detail/restaurant-detail.component.html
@@ -1,21 +1,9 @@
 <button onclick="scriptCall()" id="scriptCall" style="display: none"></button>
 <button onclick="singleListingMap()" id="loadMap" style="display: none"></button>
-<div class="listing-slider mfp-gallery-container margin-bottom-0" *ngIf="restaurant.photos; else defaultSliderPhotos">
-    <a *ngFor="let photo of restaurant.photos" href="assets/images/restaurants/{{photo}}" attr.data-background-image="assets/images/restaurants/{{photo}}"
+<div class="listing-slider mfp-gallery-container margin-bottom-0">
+    <a *ngFor="let photo of restaurant.photos" href="assets/images/items/{{photo}}" attr.data-background-image="assets/images/items/{{photo}}"
         class="item mfp-gallery" title="Title 1"></a>
 </div>
-<ng-template #defaultSliderPhotos>
-    <div class="listing-slider mfp-gallery-container margin-bottom-0">
-        <a href="assets/images/restaurants/default/single-listing-01.jpg" data-background-image="assets/images/restaurants/default/single-listing-01.jpg"
-            class="item mfp-gallery" title="Title 1"></a>
-        <a href="assets/images/restaurants/default/single-listing-02.jpg" data-background-image="assets/images/restaurants/default/single-listing-02.jpg"
-            class="item mfp-gallery" title="Title 1"></a>
-        <a href="assets/images/restaurants/default/single-listing-03.jpg" data-background-image="assets/images/restaurants/default/single-listing-03.jpg"
-            class="item mfp-gallery" title="Title 1"></a>
-        <a href="assets/images/restaurants/default/single-listing-04.jpg" data-background-image="assets/images/restaurants/default/single-listing-04.jpg"
-            class="item mfp-gallery" title="Title 1"></a>
-    </div>
-</ng-template>
 <div class="container">
     <div class="row sticky-wrapper">
         <div class="col-lg-8 col-md-8 padding-right-30">
@@ -125,8 +113,8 @@
                                     </div>
                                 </div>
                                 <p>{{comment[0]}}</p>
-                                <div class="review-images mfp-gallery-container">
-                                    <a *ngFor="let photo of comment[5]" href="assets/images/comments/{{photo}}" class="mfp-gallery">
+                                <div class="review-images mfp-gallery-container" *ngIf="comment[6].length != 0" >
+                                    <a *ngFor="let photo of comment[6]" href="assets/images/comments/{{photo}}" class="mfp-gallery">
                                         <img src="assets/images/comments/{{photo}}" alt="">
                                     </a>
                                 </div>
@@ -172,7 +160,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="clearfix"></div>
-                            <div class="leave-rating margin-bottom-30" *ngIf="!restaurant?.rated">
+                            <div class="leave-rating margin-bottom-30">
                                 <input type="radio" name="commentRating" id="rating-1" value="5" formControlName="commentRating" />
                                 <label for="rating-1" class="fa fa-star"></label>
                                 <input type="radio" name="commentRating" id="rating-2" value="4" formControlName="commentRating" />
@@ -244,7 +232,6 @@
                         <img *ngIf="restaurant?.user[0].provider != 'listeo'" src="{{restaurant?.user[0].photo}}" alt="">
                         <img *ngIf="restaurant?.user[0].provider == 'listeo' && restaurant?.user[0].photo" src="assets/images/users/{{restaurant?.user[0].photo}}"
                             alt="">
-                        <img *ngIf="restaurant?.user[0].provider == 'listeo' && !restaurant?.user[0].photo" src="assets/images/users/user.png" alt="">
                     </a>
                 </div>
                 <ul class="listing-details-sidebar">
